@@ -111,6 +111,7 @@ en:
     sign_in: Sign in
     logout: Logout
     change_password: Change Password
+    version: Version
 
     sidebars:
       dashboard: Dashboard
