@@ -151,3 +151,5 @@ Mokio <add_release_date> v0.0.7
     15. Rebuilding language management
     16. Improved movie gallery
     17. New README
+    18. Version
+    19. Smaller red header
